--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,20 @@
 /* #region global */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+/* scroll */
+
+html {
+    scroll-behavior: smooth;
+  }
+
+/* endscroll */
+
 /* font-family: 'Poppins', sans-serif; */
 
 *{
     box-sizing: border-box;
     margin: 0;
-    padding: 0;
+    padding: 3px;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -245,7 +253,7 @@ section.portfolio .flex{
     background-color: #3232E5;
     background-size: cover;
     background-position: 100% 0%;
-    transition: 8s;
+    transition: 3s;
     border-radius: 20px;
     position: relative;
 }
